readme: mention the storage upgrade step

--- a/README
+++ b/README
@@ -2,3 +2,4 @@ Provides a "Yadda" application for Phabricator.
 
 INSTALL
 phabricator/bin/config set load-libraries '["/this/repo/src"]'
+phabricator/bin/storage upgrade
